include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = services-admin
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/service-properties.png	\
	figures/services-tool.png

DOC_LINGUAS = ca cs de el en_GB es fr oc pl pt_BR sv it zh_CN

# this isn't still ported to gnome-doc-utils
SUBDIRS = nl 

-include $(top_srcdir)/git.mk
