include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = time-admin
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/time-map.png		\
	figures/time-servers.png	\
	figures/time-tool.png

DOC_LINGUAS = es fr ru sv

# This isn't still ported to gnome-doc-utils
SUBDIRS = nl
